# SO-C-RUMMY-S1-2022

./: README.md  build_run.sh  meson.build
source/: meson.build
source/include/rummy/game/: board.h  card.h  combination.h  deck.h  game.h  hand.h  player.h
source/include/rummy/render/: main_menu.h  render.h
source/include/rummy/util/: random.h
source/include/rummy/util/memory/: allocator.h  common.h  vector.h
source/src/: hello.c  source.c
source/src/game/: card.c  combination.c  deck.c  game.c  hand.c
source/src/render/: main_menu.c  render.c
source/src/util/: random.c
source/src/util/memory/: allocator.c  common.c  vector.c
spec/: Proyecto I Rummy.odt
